# platform_external_qemu

./: CMakeLists.txt  os-win32.c  qemu-options.def  savevm.c
android/: qemu-setup.c
android/avd/: hw-config-defs.h
android/filesystems/: ramdisk_extractor.cpp
android/utils/: path.c
distrib/ext4_utils/src/: make_ext4fs.c
distrib/libsparse/src/: output_file.c
distrib/sdl2-2.0.3/include/: SDL_config_windows.h
distrib/sdl2-2.0.3/src/dynapi/: SDL_dynapi_overrides.h  SDL_dynapi_procs.h
hw/android/goldfish/: trace.c
net/: net-android.c
qom/: container.c  object.c  qom-qobject.c
slirp/: slirp.c
util/: oslib-win32.c
