cmake_minimum_required (VERSION 3.1)

project(QEMU VERSION 1.0)

add_executable(emulator
        aio-android.c
        android/adb-qemud.c
        android/adb-server.c
        android/android-constants.c
        android/async-console.c
        android/async-socket-connector.c
        android/async-socket.c
        android/async-utils.c
        android/audio-test.c
        android/avd/hw-config.c
        android/avd/info.c
        android/avd/util.c
        android/base/containers/PodVector.cpp
        android/base/containers/StringVector.cpp
        android/base/files/PathUtils.cpp
        android/base/Log.cpp
        android/base/String.cpp
        android/base/StringFormat.cpp
        android/base/StringView.cpp
        android/boot-properties.c
        android/camera/camera-format-converters.c
        android/camera/camera-service.c
        android/cbuffer.c
        android/charmap.c
        android/charpipe.c
        android/cmdline-option.c
        android/config-file.c
        android/console.c
        android/core-init-utils.c
        android/cpu_accelerator.cpp
        android/display-core.c
        android/display.c
        android/emulation/CpuAccelerator.cpp
        android/filesystems/ext4_utils.cpp
        android/filesystems/fstab_parser.cpp
        android/filesystems/partition_types.cpp
        android/filesystems/ramdisk_extractor.cpp
        android/framebuffer.c
        android/gps.c
        android/help.c
        android/hw-control.c
        android/hw-events.c
        android/hw-kmsg.c
        android/hw-lcd.c
        android/hw-pipe-net.c
        android/hw-qemud.c
        android/hw-sensors.c
        android/iolooper-select.c
        android/kernel/kernel_utils.cpp
        android/keycode-array.c
        android/keycode.c
        android/loadpng.c
        android/looper-qemu.c
        android/main-common-ui.c
        android/main-common.c
        android/main.c
        android/multitouch-port.c
        android/multitouch-screen.c
        android/opengles.c
        android/qemu-setup.c
        android/qemu-tcpdump.c
        android/qemulator.c
        android/resource.c
        android/sdk-controller-socket.c
        android/sensors-port.c
        android/shaper.c
        android/skin/composer.c
        android/skin/file.c
        android/skin/image.c
        android/skin/keyboard.c
        android/skin/keyset.c
        android/skin/rect.c
        android/skin/region.c
        android/skin/scaler.c
        android/skin/surface.c
        android/skin/trackball.c
        android/skin/window.c
        android/snaphost-android.c
        android/snapshot.c
        android/sockets.c
        android/sync-utils.c
        android/user-config.c
        android/user-events-qemu.c
        android/utils/assert.c
        android/utils/bufprint.c
        android/utils/debug.c
        android/utils/dirscanner.c
        android/utils/dll.c
        android/utils/eintr_wrapper.c
        android/utils/file_data.c
        android/utils/filelock.c
        android/utils/host_bitness.c
        android/utils/ini.c
        android/utils/intmap.c
        android/utils/jpeg-compress.c
        android/utils/lineinput.c
        android/utils/mapfile.c
        android/utils/misc.c
        android/utils/panic.c
        android/utils/path.c
        android/utils/property_file.c
        android/utils/reflist.c
        android/utils/refset.c
        android/utils/stralloc.c
        android/utils/system.c
        android/utils/tempfile.c
        android/utils/timezone.c
        android/utils/vector.c
        android/utils/win32_cmdline_quote.c
        arch_init.c
        async.c
        audio/audio.c
        audio/mixeng.c
        audio/noaudio.c
        audio/wavaudio.c
        audio/wavcapture.c
        backends/msmouse.c
        block.c
        block/qcow2-cluster.c
        block/qcow2-refcount.c
        block/qcow2-snapshot.c
        block/qcow2.c
        block/raw.c
        blockdev.c
        cpu-exec.c
        cpus.c
        cputlb.c
        disas.c
        disas/i386.c
        distrib/ext4_utils/src/allocate.c
        distrib/ext4_utils/src/contents.c
        distrib/ext4_utils/src/crc16.c
        distrib/ext4_utils/src/ext4_sb.c
        distrib/ext4_utils/src/ext4_utils.c
        distrib/ext4_utils/src/extent.c
        distrib/ext4_utils/src/indirect.c
        distrib/ext4_utils/src/make_ext4fs.c
        distrib/ext4_utils/src/sha1.c
        distrib/ext4_utils/src/uuid.c
        distrib/ext4_utils/src/wipe.c
        distrib/jpeg-6b/jcapimin.c
        distrib/jpeg-6b/jcapistd.c
        distrib/jpeg-6b/jccoefct.c
        distrib/jpeg-6b/jccolor.c
        distrib/jpeg-6b/jcdctmgr.c
        distrib/jpeg-6b/jchuff.c
        distrib/jpeg-6b/jcinit.c
        distrib/jpeg-6b/jcmainct.c
        distrib/jpeg-6b/jcmarker.c
        distrib/jpeg-6b/jcmaster.c
        distrib/jpeg-6b/jcomapi.c
        distrib/jpeg-6b/jcparam.c
        distrib/jpeg-6b/jcphuff.c
        distrib/jpeg-6b/jcprepct.c
        distrib/jpeg-6b/jcsample.c
        distrib/jpeg-6b/jctrans.c
        distrib/jpeg-6b/jdapimin.c
        distrib/jpeg-6b/jdapistd.c
        distrib/jpeg-6b/jdatadst.c
        distrib/jpeg-6b/jdatasrc.c
        distrib/jpeg-6b/jdcoefct.c
        distrib/jpeg-6b/jdcolor.c
        distrib/jpeg-6b/jddctmgr.c
        distrib/jpeg-6b/jdhuff.c
        distrib/jpeg-6b/jdinput.c
        distrib/jpeg-6b/jdmainct.c
        distrib/jpeg-6b/jdmarker.c
        distrib/jpeg-6b/jdmaster.c
        distrib/jpeg-6b/jdmerge.c
        distrib/jpeg-6b/jdphuff.c
        distrib/jpeg-6b/jdpostct.c
        distrib/jpeg-6b/jdsample.c
        distrib/jpeg-6b/jdtrans.c
        distrib/jpeg-6b/jerror.c
        distrib/jpeg-6b/jfdctflt.c
        distrib/jpeg-6b/jfdctfst.c
        distrib/jpeg-6b/jfdctint.c
        distrib/jpeg-6b/jidctflt.c
        distrib/jpeg-6b/jidctfst.c
        distrib/jpeg-6b/jidctint.c
        distrib/jpeg-6b/jidctintelsse.c
        distrib/jpeg-6b/jidctred.c
        distrib/jpeg-6b/jmem-android.c
        distrib/jpeg-6b/jmemmgr.c
        distrib/jpeg-6b/jquant1.c
        distrib/jpeg-6b/jquant2.c
        distrib/jpeg-6b/jutils.c
        distrib/libpng-1.2.46/png.c
        distrib/libpng-1.2.46/pngerror.c
        distrib/libpng-1.2.46/pnggccrd.c
        distrib/libpng-1.2.46/pngget.c
        distrib/libpng-1.2.46/pngmem.c
        distrib/libpng-1.2.46/pngpread.c
        distrib/libpng-1.2.46/pngread.c
        distrib/libpng-1.2.46/pngrio.c
        distrib/libpng-1.2.46/pngrtran.c
        distrib/libpng-1.2.46/pngrutil.c
        distrib/libpng-1.2.46/pngset.c
        distrib/libpng-1.2.46/pngtrans.c
        distrib/libpng-1.2.46/pngvcrd.c
        distrib/libpng-1.2.46/pngwio.c
        distrib/libpng-1.2.46/pngwrite.c
        distrib/libpng-1.2.46/pngwtran.c
        distrib/libpng-1.2.46/pngwutil.c
        distrib/libsparse/src/backed_block.c
        distrib/libsparse/src/output_file.c
        distrib/libsparse/src/sparse.c
        distrib/libsparse/src/sparse_crc32.c
        distrib/libsparse/src/sparse_err.c
        distrib/libsparse/src/sparse_read.c
        distrib/mini-glib/src/glib-mini.c
        distrib/sdl-1.2.15/src/cpuinfo/SDL_cpuinfo.c
        distrib/sdl-1.2.15/src/events/SDL_active.c
        distrib/sdl-1.2.15/src/events/SDL_events.c
        distrib/sdl-1.2.15/src/events/SDL_expose.c
        distrib/sdl-1.2.15/src/events/SDL_keyboard.c
        distrib/sdl-1.2.15/src/events/SDL_mouse.c
        distrib/sdl-1.2.15/src/events/SDL_quit.c
        distrib/sdl-1.2.15/src/events/SDL_resize.c
        distrib/sdl-1.2.15/src/file/SDL_rwops.c
        distrib/sdl-1.2.15/src/SDL.c
        distrib/sdl-1.2.15/src/SDL_error.c
        distrib/sdl-1.2.15/src/SDL_fatal.c
        distrib/sdl-1.2.15/src/stdlib/SDL_getenv.c
        distrib/sdl-1.2.15/src/stdlib/SDL_iconv.c
        distrib/sdl-1.2.15/src/stdlib/SDL_malloc.c
        distrib/sdl-1.2.15/src/stdlib/SDL_qsort.c
        distrib/sdl-1.2.15/src/stdlib/SDL_stdlib.c
        distrib/sdl-1.2.15/src/stdlib/SDL_string.c
        distrib/sdl-1.2.15/src/thread/SDL_thread.c
        distrib/sdl-1.2.15/src/timer/SDL_timer.c
        distrib/sdl-1.2.15/src/video/dummy/SDL_nullevents.c
        distrib/sdl-1.2.15/src/video/dummy/SDL_nullmouse.c
        distrib/sdl-1.2.15/src/video/dummy/SDL_nullvideo.c
        distrib/sdl-1.2.15/src/video/SDL_blit.c
        distrib/sdl-1.2.15/src/video/SDL_blit_0.c
        distrib/sdl-1.2.15/src/video/SDL_blit_1.c
        distrib/sdl-1.2.15/src/video/SDL_blit_A.c
        distrib/sdl-1.2.15/src/video/SDL_blit_N.c
        distrib/sdl-1.2.15/src/video/SDL_bmp.c
        distrib/sdl-1.2.15/src/video/SDL_cursor.c
        distrib/sdl-1.2.15/src/video/SDL_gamma.c
        distrib/sdl-1.2.15/src/video/SDL_pixels.c
        distrib/sdl-1.2.15/src/video/SDL_RLEaccel.c
        distrib/sdl-1.2.15/src/video/SDL_stretch.c
        distrib/sdl-1.2.15/src/video/SDL_surface.c
        distrib/sdl-1.2.15/src/video/SDL_video.c
        distrib/sdl-1.2.15/src/video/SDL_yuv.c
        distrib/sdl-1.2.15/src/video/SDL_yuv_mmx.c
        distrib/sdl-1.2.15/src/video/SDL_yuv_sw.c
        distrib/zlib-1.2.8/adler32.c
        distrib/zlib-1.2.8/compress.c
        distrib/zlib-1.2.8/crc32.c
        distrib/zlib-1.2.8/deflate.c
        distrib/zlib-1.2.8/gzclose.c
        distrib/zlib-1.2.8/gzlib.c
        distrib/zlib-1.2.8/gzread.c
        distrib/zlib-1.2.8/gzwrite.c
        distrib/zlib-1.2.8/infback.c
        distrib/zlib-1.2.8/inffast.c
        distrib/zlib-1.2.8/inflate.c
        distrib/zlib-1.2.8/inftrees.c
        distrib/zlib-1.2.8/trees.c
        distrib/zlib-1.2.8/uncompr.c
        distrib/zlib-1.2.8/zutil.c
        dma-helpers.c
        exec.c
        fpu/softfloat.c
        gdbstub.c
        hw/android/goldfish/audio.c
        hw/android/goldfish/battery.c
        hw/android/goldfish/device.c
        hw/android/goldfish/events_device.c
        hw/android/goldfish/fb.c
        hw/android/goldfish/mmc.c
        hw/android/goldfish/nand.c
        hw/android/goldfish/pipe.c
        hw/android/goldfish/tty.c
        hw/android/goldfish/vmem.c
        hw/core/dma.c
        hw/core/irq.c
        hw/core/loader.c
        hw/core/qdev.c
        hw/core/sysbus.c
        hw/i386/pc.c
        hw/i386/smbios.c
        hw/input/pckbd.c
        hw/input/ps2.c
        hw/intc/apic.c
        hw/intc/i8259.c
        hw/intc/ioapic.c
        hw/net/ne2000.c
        hw/net/smc91c111.c
        hw/nvram/fw_cfg.c
        hw/pci-host/piix.c
        hw/pci/pci.c
        hw/timer/i8254.c
        hw/timer/mc146818rtc.c
        hw/watchdog/watchdog.c
        iohandler.c
        ioport.c
        log-rotate-android.c
        main-loop.c
        memory-android.c
        migration-dummy-android.c
        monitor-android.c
        net/net-android.c
        proxy/proxy_common.c
        proxy/proxy_http.c
        proxy/proxy_http_connector.c
        proxy/proxy_http_rewriter.c
        qemu-char.c
        qemu-log.c
        qemu-timer.c
        qobject/json-lexer.c
        qobject/json-parser.c
        qobject/json-streamer.c
        qobject/qbool.c
        qobject/qdict.c
        qobject/qerror.c
        qobject/qfloat.c
        qobject/qint.c
        qobject/qjson.c
        qobject/qlist.c
        qobject/qstring.c
        qom/container.c
        qom/object.c
        qom/qom-qobject.c
        savevm.c
        slirp-android/bootp.c
        slirp-android/cksum.c
        slirp-android/debug.c
        slirp-android/if.c
        slirp-android/ip_icmp.c
        slirp-android/ip_input.c
        slirp-android/ip_output.c
        slirp-android/mbuf.c
        slirp-android/misc.c
        slirp-android/sbuf.c
        slirp-android/slirp.c
        slirp-android/socket.c
        slirp-android/tcp_input.c
        slirp-android/tcp_output.c
        slirp-android/tcp_subr.c
        slirp-android/tcp_timer.c
        slirp-android/tftp.c
        slirp-android/udp.c
        target-i386/cc_helper.c
        target-i386/excp_helper.c
        target-i386/fpu_helper.c
        target-i386/hax-all.c
        target-i386/helper.c
        target-i386/int_helper.c
        target-i386/machine.c
        target-i386/mem_helper.c
        target-i386/misc_helper.c
        target-i386/seg_helper.c
        target-i386/smm_helper.c
        target-i386/svm_helper.c
        target-i386/translate.c
        tcg-runtime.c
        tcg/optimize.c
        tcg/tcg.c
        telephony/android_modem.c
        telephony/gsm.c
        telephony/modem_driver.c
        telephony/remote_call.c
        telephony/sim_card.c
        telephony/sms.c
        telephony/sysdeps_qemu.c
        translate-all.c
        ui/console.c
        ui/d3des.c
        ui/input.c
        ui/keymaps.c
        ui/vnc-android.c
        util/aes.c
        util/bitops.c
        util/cutils.c
        util/error.c
        util/hexdump.c
        util/host-utils.c
        util/iov.c
        util/iov.c
        util/module.c
        util/notify.c
        util/osdep.c
        util/path.c
        util/qemu-config.c
        util/qemu-error.c
        util/qemu-option.c
        util/qemu-sockets-android.c
        util/qemu-timer-common.c
        util/unicode.c
        util/yield-android.c
        vl-android.c
#        qapi-auto-generated/qapi-types.c
#        qapi-auto-generated/qapi-visit.c
#        qapi-auto-generated/qmp-marshal.c
)

target_compile_definitions(emulator PUBLIC
    -DANDROID_BUILD_ID=build_id
    -DANDROID_SDK_TOOLS_REVISION=tools_revision
    -D_FILE_OFFSET_BITS=64
    -D_LARGEFILE_SOURCE
    -DNEED_CPU_H
    -DNEED_TYPEDEFS # libslurp

    -DTARGET_ARCH=\"x86\"
    -DCONFIG_BDRV_WHITELIST=\"\"

    -DHAS_AUDIO

    -DAVOID_TABLES
    -DANDROID_TILE_BASED_DECODE
    -DANDROID_INTELSSE2_IDCT
    -DHOST
)

target_include_directories(emulator PUBLIC
    .
    include
    android/config/target-x86
    distrib/mini-glib/include
    distrib/ext4_utils/include
    distrib/libsparse/include
    qapi-auto-generated
    target-i386
    telephony
    slirp-android
    distrib/sdl-1.2.15/include
    proxy
    distrib/jpeg-6b
    tcg
    tcg/i386
    distrib/libpng-1.2.46
)
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    target_sources(emulator PRIVATE
        block/raw-win32.c
        distrib/mini-glib/src/glib-mini-win32.c
        os-win32.c
        util/oslib-win32.c
        tap-win32.c
        android/camera/camera-capture-windows.c
        util/qemu-thread-win32.c

        distrib/sdl-1.2.15/src/thread/win32/SDL_sysmutex.c
        distrib/sdl-1.2.15/src/thread/win32/SDL_syssem.c
        distrib/sdl-1.2.15/src/thread/win32/SDL_systhread.c
        distrib/sdl-1.2.15/src/timer/win32/SDL_systimer.c

        audio/winaudio.c

        target-i386/hax-windows.c
        distrib/sdl-1.2.15/src/main/win32/SDL_win32_main.c
        distrib/sdl-1.2.15/src/video/windib/SDL_dibevents.c
        distrib/sdl-1.2.15/src/video/windib/SDL_dibvideo.c
        distrib/sdl-1.2.15/src/video/wincommon/SDL_sysevents.c
        distrib/sdl-1.2.15/src/video/wincommon/SDL_sysmouse.c
        distrib/sdl-1.2.15/src/video/wincommon/SDL_syswm.c
        distrib/sdl-1.2.15/src/video/wincommon/SDL_wingl.c
    )
    target_compile_definitions(emulator PRIVATE
        -DUSE_MINGW=1
#        -falign-functions=0
        -D_GNU_SOURCE=1 -Dmain=SDL_main -DNO_STDIO_REDIRECT=1
        -D_WIN32
        -D_WIN64
        -DWINVER=0x501

        -DCONFIG_WINAUDIO
        -D__USE_MINGW_ANSI_STDIO=1
    )
    target_link_libraries(emulator
        ws2_32 winmm iphlpapi vfw32
    )
    target_compile_options(emulator PRIVATE
        -Wl,--allow-undefined
    )
    target_include_directories(emulator PRIVATE
        android/config/windows
    )
else()
    target_sources(emulator PRIVATE
        os-posix.c
        util/oslib-posix.c

        distrib/sdl-1.2.15/src/thread/pthread/SDL_syscond.c
        distrib/sdl-1.2.15/src/thread/pthread/SDL_sysmutex.c
        distrib/sdl-1.2.15/src/thread/pthread/SDL_syssem.c
        distrib/sdl-1.2.15/src/thread/pthread/SDL_systhread.c
        distrib/sdl-1.2.15/src/timer/unix/SDL_systimer.c

        distrib/libselinux/src/callbacks.c
        distrib/libselinux/src/check_context.c
        distrib/libselinux/src/freecon.c
        distrib/libselinux/src/init.c
        distrib/libselinux/src/label.c
        distrib/libselinux/src/label_file.c
        distrib/libselinux/src/label_android_property.c
    )
    target_include_directories(emulator PRIVATE
        distrib/libselinux/include
    )
    # TODO: add libselinux sources.
endif()

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    find_library(COCOA_LIBRARY Cocoa)
    find_library(COREFOUNDATION_LIBRARY CoreFoundation )
    find_library(APPSVC_LIBRARY ApplicationServices)
    find_library(OPENGL_LIBRARY OpenGL)
    find_library(CARBON_LIBRARY Carbon)
    find_library(IOKIT_LIBRARY IOKit)
    find_library(COREADUIO_LIBRARY CoreAudio)
    find_library(COREVIDEO_LIBRARY CoreVideo)
    find_library(QTKIT_LIBRARY QtKit)
    target_compile_definitions(emulator PRIVATE
        -D_DARWIN_C_SOURCE=1
        -D_GNU_SOURCE=1
        -DTHREAD_SAFE
        -DDARWIN
        -DCONFIG_COREAUDIO
        -DHOST_BSD=1
    )
    target_include_directories(emulator PRIVATE
        android/config/darwin-x86_64
    )
    target_link_libraries(emulator PRIVATE
        ${COREFOUNDATION_LIBRARY} ${APPSVC_LIBRARY} ${OPENGL_LIBRARY} ${CARBON_LIBRARY} ${IOKIT_LIBRARY} ${COCOA_LIBRARY}
        ${COREVIDEO_LIBRARY} ${COREADUIO_LIBRARY} ${QTKIT_LIBRARY}
        /usr/lib/dylib1.o
    )
    target_sources(emulator PRIVATE
        distrib/sdl-1.2.15/src/video/quartz/SDL_QuartzGL.m
        distrib/sdl-1.2.15/src/video/quartz/SDL_QuartzVideo.m
        distrib/sdl-1.2.15/src/video/quartz/SDL_QuartzWM.m
        distrib/sdl-1.2.15/src/video/quartz/SDL_QuartzWindow.m
        distrib/sdl-1.2.15/src/video/quartz/SDL_QuartzEvents.m
        distrib/sdl-1.2.15/src/main/macosx/SDLMain.m
        distrib/sdl-1.2.15/src/loadso/macosx/SDL_dlcompat.c

        audio/coreaudio.c

        android/camera/camera-capture-mac.m
        util/compatfd.c
        util/qemu-thread-posix.c
        target-i386/hax-darwin.c
    )
endif()
